--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "type": "module",
   "dependencies": {
     "@fadroma/client":            "workspace:^2",
+    "@fadroma/client-scrt":       "workspace:^2",
     "@fadroma/client-scrt-amino": "workspace:^2",
     "@fadroma/client-scrt-grpc":  "workspace:^2",
     "@fadroma/ops":               "workspace:^1",
